# FFmpeg

./: .gitignore  CMakeLists.txt  INSTALL.md  config.out  configure  pyproject.toml
ffbuild/: codegen.py  config_mak_to_cmake.py  configure_functions.sh  configure_platform.sh  file2c.py  generate_cmakes.sh  makefile_to_cmake.py  platform.cmake  refactor_configure.py  version.sh
ffbuild/assets/: jules.ad88.new.ninja  jules.ad88.ninja
ffbuild/templates/: avconfig.h.jinja  avconfig_header.h.jinja  component_list.c.jinja  config.cmake.jinja  config.sh.jinja  config_asm.asm.jinja  config_asm_header.asm.jinja  config_components_header.h.jinja  config_h.jinja  config_header.h.jinja  config_mak.mak.jinja  config_texi.texi.jinja  ffbuild_config.mak.jinja  file2c.c.jinja  sources.cmake.jinja
fftools/: CMakeLists.txt  Makefile  ffmpeg.c  ffmpeg.sourcelist.mak  ffmpeg_dec.c  ffmpeg_demux.c  ffmpeg_mux_init.c  ffmpeg_opt.c  ffplay.sourcelist.mak  ffprobe.sourcelist.mak  fftools.sourcelist.mak  sources.cmake
fftools/graph/: graphprint.c
fftools/resources/: Makefile  resobjs.sourcelist.mak
libavcodec/: CMakeLists.txt  sources.cmake
libavdevice/: CMakeLists.txt  sources.cmake
libavfilter/: CMakeLists.txt  sources.cmake
libavformat/: CMakeLists.txt  sources.cmake
libavutil/: CMakeLists.txt  log.c  sources.cmake  tx_priv.h  tx_template.c
libswresample/: CMakeLists.txt  sources.cmake
libswscale/: CMakeLists.txt  sources.cmake
tools/: config_mak_to_cmake.py  file2c.py  makefile_to_cmake.py
