[project]
name = "ffbuild-py"
version = "0.1.0"
authors = [
    { name = "Refael Ackermann", email = "refack@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ffbuild"
module-root = ""
